prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/compiler_internals_forbidden.nut
// EXPECT_ERROR: "Access to compiler internals is forbidden"
let x = $${return 42}
